--- a/product-detail.yml
+++ b/product-detail.yml
@@ -1,12 +1,27 @@
-db:
-  url: jdbc:h2:~/MeliChallenge;AUTO_SERVER=TRUE
-  driver-class-name: org.h2.Driver
-  username: sa
-  password: 
-h2:
-  console:
-    enabled: true
-    path: /h2-console
+spring:
+  application:
+    name: product-detail
+  profiles:
+    active: default
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:~/MeliChallenge;AUTO_SERVER=TRUE
+    username: sa
+    password: ""
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: true
+  liquibase:
+    enabled: true  # Activado para ver la creación de tablas
+    change-log: classpath:db/changelog/db.changelog-master.xml
+    drop-first: true  # No eliminar esquema al inicio
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  config:
+    import: "optional:configserver:http://localhost:7777"
 server:
   port: 8080
   tomcat:
@@ -27,17 +42,41 @@ management:
     sampling:
       probability: 1.0  # 100% para endpoints de aplicación
     enabled: true  # 
-zipkin:
+  zipkin:
     tracing:
       endpoint: http://localhost:9411/api/v2/spans
-prometheus:
+  endpoints:
+    web:
+      exposure:
+        include: info,health,metrics,prometheus
+    access:
+      default: unrestricted
+  prometheus:
+    metrics:
+      export:
+        enabled: true
+        step: 30s
   metrics:
-    export:
-      enabled: true
-      step: 30s
+    tags:
+      application: ${spring.application.name}
+  endpoint:
+    health:
+      show-details: when-authorized
+    metrics:
+      access: unrestricted
+    prometheus:
+      access: unrestricted
 logging:
   level:
     '[io.micrometer.tracing]': WARN
     '[brave]': WARN
   pattern:
     level: "%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
+eureka:
+  instance:
+    instance-id: "${spring.application.name}:${random.value}"
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
