--- a/product-detail.yml
+++ b/product-detail.yml
@@ -10,9 +10,9 @@ jpa:
     ddl-auto: none
   show-sql: true
 liquibase:
-  enabled: true  # Activado para ver la creación de tablas
+  enabled: true 
   change-log: classpath:db/changelog/db.changelog-master.xml
-  drop-first: true  # No eliminar esquema al inicio
+  drop-first: true  
 h2:
   console:
     enabled: true
