--- a/product-detail.yml
+++ b/product-detail.yml
@@ -19,6 +19,12 @@ config:
     import: "optional:configserver:http://localhost:7777"
 servlet:
     context-path: /product-detail
+tomcat:
+    mbeanregistry:
+      enabled: true
+    threads:
+      max: 25
+      min-spare: 2  
 springdoc:
   swagger-ui:
     path: /swagger
