--- a/product-detail.yml
+++ b/product-detail.yml
@@ -1,48 +1,3 @@
-datasource:
-  driver-class-name: org.h2.Driver
-  url: jdbc:h2:~/MeliChallenge;AUTO_SERVER=TRUE
-  username: sa
-  password: ""
-jpa:
-  hibernate:
-    ddl-auto: none
-  show-sql: true
-liquibase:
-  enabled: true 
-  change-log: classpath:db/changelog/db.changelog-master.xml
-  drop-first: true  
-h2:
-  console:
-    enabled: true
-    path: /h2-console
-config:
-    import: "optional:configserver:http://localhost:7777"
-servlet:
-    context-path: /product-detail
-tomcat:
-    mbeanregistry:
-      enabled: true
-    threads:
-      max: 25
-      min-spare: 2  
 springdoc:
-  swagger-ui:
-    path: /swagger
-  api-docs:
-    path: /v3/api-docs
-tracing:
-  sampling:
-    probability: 1.0
-  enabled: true  
-zipkin:
-  tracing:
-    endpoint: http://localhost:9411/api/v2/spans
-prometheus:
-  metrics:
-    export:
-      enabled: true
-      step: 30s
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+  swagger: "/swagger"
+  openApi: "/v3/api-docs"
