--- a/product-detail.yml
+++ b/product-detail.yml
@@ -1,3 +1,5 @@
-springdoc:
-  swagger: /swagger
-  openApi: /v3/api-docs
+db:
+  driver: org.h2.Driver
+  url: jdbc:h2:~/MeliChallengFallback;AUTO_SERVER=TRUE
+  username: sa
+  password: ""
