Update H2 database URL in product-detail.yml

--- a/product-detail.yml
+++ b/product-detail.yml
@@ -1,5 +1,5 @@
 db:
   driver: org.h2.Driver
-  url: jdbc:h2:~/MeliChallengFallback;AUTO_SERVER=TRUE
+  url: jdbc:h2:~/MeliChalleng;AUTO_SERVER=TRUE
   username: sa
   password: ""
